infra/k8s/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1 #no of pods
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: akila97/client # same as akila97/posts:latest
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  #type: ClusterIP #Optional, Defaults to ClusterIP
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
