infra/k8s/comments-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deployment
spec:
  replicas: 1 #no of pods
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: akila97/comments # same as akila97/posts:latest
---
apiVersion: v1
kind: Service
metadata:
  name: comments-service
spec:
  #type: ClusterIP #Optional, Defaults to ClusterIP
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
