infra/k8s/event-bus-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-deployment
spec:
  replicas: 1 #no of pods
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: akila97/event-bus # same as akila97/posts:latest
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-service
spec:
  #type: ClusterIP #Optional, Defaults to ClusterIP
  selector:
    app: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
