infra/k8s/moderation-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-deployment
spec:
  replicas: 1 #no of pods
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: akila97/moderation # same as akila97/posts:latest
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-service
spec:
  #type: ClusterIP #Optional, Defaults to ClusterIP
  selector:
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
