infra/k8s/posts-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-deployment
spec:
  replicas: 1 #no of pods
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: akila97/posts # same as akila97/posts:latest
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-service
spec:
  #type: ClusterIP #Optional, Defaults to ClusterIP
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
