infra/k8s/query-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deployment
spec:
  replicas: 1 #no of pods
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: akila97/query # same as akila97/posts:latest
---
apiVersion: v1
kind: Service
metadata:
  name: query-service
spec:
  #type: ClusterIP #Optional, Defaults to ClusterIP
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
